<resources>
    <string name="app_name">Notey</string>
    <string name="hello_world">Hello World!</string>
    <string name="menu_settings">Menu Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">send</string>
    <string name="pitch_text">Pitch in Hz</string>
    <string name="unknown_note">Unknown note</string>
    <string name="start_recording_button">start</string>
    <string name="stop_recording_button">stop</string>
    <string name="switchToToneGenerator">Tones</string>
    <string name="A_note">A</string>
    <string name="A_sharp_note">A#</string>
    <string name="B_note">B</string>
    <string name="C_note">C</string>
    <string name="C_sharp_note">C#</string>
    <string name="D_note">D</string>
    <string name="D_sharp_note">D#</string>
    <string name="E_note">E</string>
    <string name="F_note">F</string>
    <string name="F_sharp_note">F#</string>
    <string name="G_note">G</string>
    <string name="G_sharp_note">G#</string>

    <string name="too_much_noise">-</string>
    <string name="too_high_frequency">Too high frequency</string>
    <string name="too_low_frequency">Too low frequency</string>
    <string name="help_text">Start singing or play a tune to find out its note</string>
</resources>
